fix(.env.example): SITE_URL example link

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -48,7 +48,7 @@ PGRST_DB_SCHEMAS=public,storage,graphql_public
 ############
 
 ## General
-SITE_URL=https://client.example.com
+SITE_URL=https://server.example.com
 ADDITIONAL_REDIRECT_URLS=
 JWT_EXPIRY=3600
 DISABLE_SIGNUP=false
