fix(.env.example): SITE_URL pointing to client and SUPABASE_HOST to API_EXTERNAL_URL

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -48,7 +48,7 @@ PGRST_DB_SCHEMAS=public,storage,graphql_public
 ############
 
 ## General
-SITE_URL=https://server.example.com
+SITE_URL=https://client.example.com
 ADDITIONAL_REDIRECT_URLS=
 JWT_EXPIRY=3600
 DISABLE_SIGNUP=false
@@ -152,7 +152,7 @@ PGADMIN_ADMIN_PASSWORD=strong_password
 # Recogito Studio 
 ############
 
-SUPABASE_HOST="${SITE_URL}"
+SUPABASE_HOST="${API_EXTERNAL_URL}"
 SUPABASE_SERVICE_KEY="${SERVICE_ROLE_KEY}"
 ORG_ADMIN_PW=this_password_is_insecure_and_should_be_updated
 
